--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "react-scripts": "^5.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^14.2.1",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.15",
     "loader-utils": "3.2.1",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "vitest": "^4.0.16"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,6 +24,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
-
