--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^14.2.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.15",
     "loader-utils": "3.2.1",
-    "typescript": "4.4.4",
-    "vitest": "^4.0.16"
+    "typescript": "4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
